--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ node_js:
 env:
   global:
     - BROWSERSTACK_USER=danielschreiber1
-    # BROWSERSTACK_KEY:
-    - secure: mcUCykGm4bUZ3C TODO
 
 before_script:
   - npm install -g selenium-webdriver
@@ -17,5 +15,4 @@ script: node test/test.js
 addons:
   browserstack:
     username: "danielschreiber1"
-    access_key:
-      secure: "TODO The secure string output of `travis encrypt`"
+    access_key: $BROWSERSTACK_KEY
